--- a/android/build.gradle
+++ b/android/build.gradle
@@ -1,9 +1,13 @@
-allprojects {
+buildscript {
     repositories {
         google()
         mavenCentral()
     }
+    dependencies {
+        classpath 'com.android.tools.build:gradle:8.1.0'
+    }
 }
+
 
 rootProject.buildDir = '../build'
 subprojects {
