--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -33,6 +33,10 @@ dependencies:
   sqflite: ^2.0.0+4
   path_provider: ^2.0.10
   mobile_scanner: ^2.1.0
+  sqflite_common_ffi: ^2.0.0+1
+  sqflite_common_ffi_web: ^0.4.5+1
+  shared_preferences: ^2.0.9 
+
 
   # The following adds the Cupertino Icons font to your application.
   # Use with the CupertinoIcons class for iOS style icons.
